added background no repeat

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main id="main">
         <div class="logo_wrapper">
-            <a href="" class="logo">
+            <a href="https://training.zuri.team/" class="logo">
                 <img src="hng-logo.png" alt="hng-logo">
             </a>
         </div>
